<resources>
    <string name="app_name">Smart Lights</string>
    <string name="init_page_first_title"> Welcome to Smart Lights</string>
    <string name="init_page_second_title">The product will make your home smarter and more comfortable</string>
    <string name="my_home">My Home</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="create_title">Create a New Account</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="idcode">ID Code</string>
    <string name="smart_actions">Smart Actions</string>
    <string name="home">Home</string>
    <string name="smart">Smart</string>
    <string name="profile">Profile</string>
    <string name="gotobed">Smart Action 1</string>
    <string name="vacation">Smart Action 2</string>
    <string name="smart3">Smart Action 3</string>
    <string name="myPage">My Page</string>
    <string name="name">Name</string>
    <string name="changePass">Change Password</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="change">Change</string>
    <string name="someName">Some Random Name</string>
    <string name="someEmail">email@gmail.com</string>
    <string name="address">Address</string>
    <string name="chooseEsp">Choose the Light</string>
    <string name="logout">Logout</string>
</resources>