<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Off_white">

    <Button
        android:id="@+id/signup_but"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/loginbutton"
        android:fontFamily="@font/roboto"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/signupbutton"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:background="@drawable/signupbutton"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_title"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/signupbutton"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/phone"
        android:textColorHint="@color/gray"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/signupbutton"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/signupbutton"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/idcode"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/address"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/signupbutton"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto"
        android:text="@string/create_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/signup_goBack"
        android:layout_width="69dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_but"
        app:srcCompat="@drawable/seta"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck, ContentDescription,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="123dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/_135768" />
</androidx.constraintlayout.widget.ConstraintLayout>